# influxdb

./: CNAME  README.md  TUTORIAL.md  ct_data.cfg  requirements.txt  setup.cfg
data/: Socrata_HPD_UCR_Codes.txt
scripts/: cases_per_town.py  import_covid_data.sh  massage_school_covid_data.py  police_cases_importer.py  socrata_codes_importer.py
tutorial/: README.md
